Assets added, initial logic for key press, initial style and html structure

--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <script src="js/app.js"></script>
+   <link rel="stylesheet" href="css/styles.css">
    <title>Document</title>
 </head>
+
 <body>
-   
+
+
+   <main>
+      <section class="container">
+         <div class="string">E</div>
+         <div class="string">A</div>
+         <div class="string">D</div>
+         <div class="string">G</div>
+         <div class="string">B</div>
+         <div class="string">E</div>
+      </section>
+   </main>
+
+   <audio data-key="81" src="assets/guitar-strings-sounds/E-string.mp3"></audio>
+   <audio data-key="87" src="assets/guitar-strings-sounds/A-string.mp3"></audio>
+   <audio data-key="69" src="assets/guitar-strings-sounds/D-string.mp3"></audio>
+   <audio data-key="82" src="assets/guitar-strings-sounds/G-string.mp3"></audio>
+   <audio data-key="84" src="assets/guitar-strings-sounds/B-string.mp3"></audio>
+   <audio data-key="89" src="assets/guitar-strings-sounds/HE-string.mp3"></audio>
 
 </body>
+
 </html>
