--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
    <main>
       <section class="container">
-         <div class="string">E</div>
-         <div class="string">A</div>
-         <div class="string">D</div>
-         <div class="string">G</div>
-         <div class="string">B</div>
-         <div class="string">E</div>
+         <div data-key="81" class="string">E</div>
+         <div data-key="87" class="string">A</div>
+         <div data-key="69" class="string">D</div>
+         <div data-key="82" class="string">G</div>
+         <div data-key="84" class="string">B</div>
+         <div data-key="89" class="string">E</div>
       </section>
    </main>
 
